@@ -24,8 +24,9 @@ public class CLImages {
     public static final BufferedImage VOLTMETER = getBufferedImage( "voltmeter.png" );
     public static final BufferedImage RED_PROBE = getBufferedImage( "redProbe.png" );
     public static final BufferedImage BLACK_PROBE = getBufferedImage( "blackProbe.png" );
-    public static final BufferedImage SCALE_BUTTON_ARMED = getBufferedImage( "scale-button-armed.png" );
-    public static final BufferedImage SCALE_BUTTON_UNARMED = getBufferedImage( "scale-button-unarmed.png" );
+    public static final BufferedImage SCALE_BUTTON_MINUS = getBufferedImage( "scale-button-minus.png" );
+    public static final BufferedImage SCALE_BUTTON_PLUS = getBufferedImage( "scale-button-plus.png" );
+    public static final BufferedImage SCALE_BUTTON_DISABLED = getBufferedImage( "scale-button-disabled.png" );
     
     // common images
     public static final BufferedImage CLOSE_BUTTON = getCommonBufferedImage( PhetCommonResources.IMAGE_CLOSE_BUTTON );
